force-app/main/default/objects/Work_Assignment__c/Work_Assignment__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents the assignment of a specific unit of work to a project team member.</description>
    <label>Work Assignment</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>