force-app/main/default/objects/Work_Assignment__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <description>Different types of assignments</description>
    <label>Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
                <default>true</default>
                <label>Build</label>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>