force-app/main/default/objects/Work_Assignment__c/fields/Build_Unit_Test_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Build_Unit_Test_Percentage__c</fullName>
    <formula>CASE( Status__c ,
  &quot;Not Started&quot;, 0,
  &quot;Started Component&quot;, 10/100,
  &quot;Development in Progress&quot;, 25/100,
  &quot;Ready for Review&quot;, 35/100,
  &quot;Feedback Incorporated&quot;, 50/100,
  &quot;Offshore Unit Testing Complete&quot;, 60/100,
  &quot;Onshore Unit Testing Complete&quot;, 75/100,
  &quot;Onshore Unit Testing Feedback Incorporated&quot;, 75/100,
  &quot;Onshore Team Review&quot;, 80/100,
  &quot;Ready for Final Review&quot;, 90/100,
  &quot;Onshore Team Feedback Unit Testing Complete&quot;, 95/100,
  &quot;Client Reviewed and/or Ready for Next Environment&quot;,1,
  NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build/Unit Test Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>