force-app/main/default/objects/Work_Assignment__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <formula>Requirement_Number__r.Capability__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capability</label>
    <type>Text</type>
</CustomField>