force-app/main/default/objects/Work_Assignment__c/fields/Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Complete_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Work Requirement created date.</description>
    <label>Complete Date</label>
    <type>Date</type>
</CustomField>