force-app/main/default/objects/Work_Assignment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work Requirement Name</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requirement_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>