force-app/main/default/objects/Work_Assignment__c/fields/NS_DeveloperComment__c.field-meta.xml
<CustomField>
    <fullName>NS_DeveloperComment__c</fullName>
    <description>It is to capture developer comment on the particular request</description>
    <label>Developer Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>