force-app/main/default/objects/Work_Assignment__c/fields/NS_DevelopmentProgress__c.field-meta.xml
<CustomField>
    <fullName>NS_DevelopmentProgress__c</fullName>
    <description>It captures development progress for a request</description>
    <label>Development Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>