force-app/main/default/objects/Work_Assignment__c/fields/Onshore_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Onshore_Feedback__c</fullName>
    <description>This field is for Onshore Feedback</description>
    <label>Onshore Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>