force-app/main/default/objects/Work_Assignment__c/fields/Planned_Release__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release__c</fullName>
    <formula>Requirement_Number__r.Planned_Release__r.Name</formula>
    <label>Planned Release</label>
    <type>Text</type>
</CustomField>