force-app/main/default/objects/Work_Assignment__c/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <description>Awaiting requirement specification for the field.</description>
    <label>Project Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Configuration Resource</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Data Migration Resource</fullName>
            </value>
            <value>
                <fullName>Development Lead</fullName>
            </value>
            <value>
                <fullName>Development Resource</fullName>
            </value>
            <value>
                <fullName>Integration Resource</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>QA/Testing Lead</fullName>
            </value>
            <value>
                <fullName>QA/Testing Resource</fullName>
            </value>
            <value>
                <fullName>Release Analyst</fullName>
            </value>
            <value>
                <fullName>Release Manager</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Solution Lead</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>