force-app/main/default/objects/Work_Assignment__c/fields/Rejected_Dupe_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Dupe_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to help determine of a work assignment is no longer considered</description>
    <inlineHelpText>Field to help determine of a work assignment is no longer considered</inlineHelpText>
    <label>Rejected\Dupe\Cancelled</label>
    <type>Checkbox</type>
</CustomField>