force-app/main/default/objects/Work_Assignment__c/fields/Release_Plan__c.field-meta.xml
<CustomField>
    <fullName>Release_Plan__c</fullName>
    <formula>Requirement_Number__r.Planned_Release__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Plan</label>
    <type>Text</type>
</CustomField>