force-app/main/default/objects/Work_Assignment__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <formula>Text(Requirement_Number__r.Status__c)</formula>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>