force-app/main/default/objects/Work_Assignment__c/fields/Requirement_Number__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related request with the work assignment</description>
    <label>Requirement #</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Work Assignment</relationshipLabel>
    <relationshipName>Work_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>