force-app/main/default/objects/Work_Assignment__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>Created for NS Phase 2</description>
    <label>Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sprint 1</fullName>
            </value>
            <value>
                <fullName>Sprint 2</fullName>
            </value>
            <value>
                <fullName>Sprint 3</fullName>
            </value>
            <value>
                <fullName>Sprint 4</fullName>
            </value>
            <value>
                <fullName>Sprint 5</fullName>
            </value>
            <value>
                <fullName>Sprint 6</fullName>
            </value>
            <value>
                <fullName>Sprint 7</fullName>
            </value>
            <value>
                <fullName>Sprint 8</fullName>
            </value>
            <value>
                <fullName>Sprint 9</fullName>
            </value>
            <value>
                <fullName>Sprint 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>