force-app/main/default/objects/Work_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the work asignment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Development in Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Onshore Unit Testing Complete</fullName>
            </value>
            <value>
                <fullName>Ready for Final Review</fullName>
            </value>
            <value>
                <fullName>Client Reviewed and/or Ready for Next Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>