force-app/main/default/objects/Work_Assignment__c/fields/Sub_Capability__c.field-meta.xml
<CustomField>
    <fullName>Sub_Capability__c</fullName>
    <description>Capture Sub Capability of related Request</description>
    <label>Sub Capability</label>
    <type>TextArea</type>
</CustomField>