force-app/main/default/objects/Work_Assignment__c/validationRules/WA_Create_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>WA_Create_Date</fullName>
    <active>false</active>
    <description>Work Assignment Creation Date must be greater than Today.</description>
    <errorConditionFormula>Complete_Date__c  &lt; TODAY()</errorConditionFormula>
    <errorMessage>Creation Date must be greater than Today.</errorMessage>
</ValidationRule>