force-app/main/default/objects/Work_Assignment__c/listViews/Phase_2_Work_Assignments1.listView-meta.xml
<ListView>
    <fullName>Phase_2_Work_Assignments1</fullName>
    <columns>Sprint__c</columns>
    <columns>NAME</columns>
    <columns>Requirement_Number__c</columns>
    <columns>Capability__c</columns>
    <columns>Status__c</columns>
    <columns>Build_Unit_Test_Percentage__c</columns>
    <columns>NS_DeveloperComment__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Release_Plan__c</field>
        <operation>equals</operation>
        <value>Phase 2</value>
    </filters>
    <label>Phase 2 Work Assignments</label>
</ListView>